[package]
name = "walk-the-dog"
version = "0.1.0"
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
web-sys= "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
futures = "0.3.28"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
