[package]
name = "walk-the-dog"
version = "0.1.0"
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
#web-sys= "0.3.64"
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
futures = "0.3.28"
wasm-bindgen-futures = "0.4.37"
serde = {version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
async-trait = "0.1.73"




# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.64"
features = ["console",
           "Window",
           "Document",
           "HtmlCanvasElement",
           "CanvasRenderingContext2d",
           "Element", 
           "HtmlImageElement",
           "Response", 
           "Performance",]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.37"
js-sys = "0.3.64"
