[package]
name = "imagecli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "imagix"
path = "src/imagix/mod.rs"

[[bin]]
name = "imagecli"
path = "src/main.rs"

[dependencies]
image = "0.24.1"
structopt = "0.3.26"
